--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body {
+  @apply h-full;
+}
+html {
+  @apply bg-gray-100;
+}
