fix sticky search

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,10 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+div.ptr {
+  @apply overflow-visible;
+}
+
 .ptr__pull-down .lds-ellipsis div {
   @apply bg-teal-100;
 }
 
 .ptr__pull-down .ptr__pull-down--pull-more div p {
   @apply hidden;
+}
+
+.ptr .ptr__children {
+  @apply overflow-visible;
 }
