--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  @apply bg-teal-600 text-gray-50;
+}
+
 div.ptr {
   @apply overflow-visible;
 }
