--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,3 +22,44 @@ div.ptr {
 .ptr .ptr__children {
   @apply overflow-visible !important;
 }
+
+.circle__svg {
+  animation: 2s linear infinite both circle__svg;
+}
+
+@keyframes circle__svg {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  100% {
+    transform: rotateZ(360deg);
+  }
+}
+
+.circle__svg-circle {
+  animation: 1.4s ease-in-out infinite both circle__svg-circle;
+  animation-delay: 100ms;
+  stroke-dasharray: 285;
+  stroke-linecap: round;
+  stroke-width: 10px;
+  transform-origin: 50% 50%;
+}
+
+@keyframes circle__svg-circle {
+  0%,
+  25% {
+    stroke-dashoffset: 280;
+    transform: rotate(0);
+  }
+
+  50%,
+  75% {
+    stroke-dashoffset: 75;
+    transform: rotate(45deg);
+  }
+
+  100% {
+    stroke-dashoffset: 280;
+    transform: rotate(360deg);
+  }
+}
